--- a/xss/production/test/3js-ms.html
+++ b/xss/production/test/3js-ms.html
@@ -190,10 +190,9 @@ fade_1 =
 new fade_anim(
 g_sequence_manager);
 		    lbl0 = new ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
-            camera_1.position.z = 500;
-            light.position.y = 0.5;
-            light.position.z = 1;
-            set_rotation_x(cylinder_1.rotation, 30);
+            camera_1.position = ;
+            light.position = ;
+            cylinder_1.rotation = ;
 	cylinder_1.events.addListener("click", function()
 	{    
 		anim_1.start();
