--- a/xss/production/test/3js-ui.html
+++ b/xss/production/test/3js-ui.html
@@ -166,9 +166,8 @@ plane_1.manager = manager;
 		    btn1 = new ui.Button(g_ui_root.manager, g_ui_root, "images/smile_sad_48.png", "images/smile_grin_48.png");
 		    lbl2 = new ui.Label(g_ui_root.manager, g_ui_root, "Verdana");
             set_material_alpha(plane_material, 50);
-            camera_1.position.y = 150;
-            camera_1.position.z = 500;
-            cube_1.position.y = 150;
+            camera_1.position = ;
+            cube_1.position = ;
             lbl0.set_x(240);
             lbl0.set_y(75);
             lbl0.text("Click smile to count");
