--- a/xss/production/test/3js_carousel.html
+++ b/xss/production/test/3js_carousel.html
@@ -174,13 +174,12 @@ application.events.dispatch("switch_cameras", []);
 		img_reflect.events = new ev.EventHolder();
 				if(img_reflect instanceof THREE.Object3D)
 					my_plane.add(img_reflect);
-            set_rotation_x(img_plane.rotation, 90);
+            img_plane.rotation = ;
             img_reflect.doubleSided = true;
             set_object_alpha(img_reflect, 40);
-            img_reflect.scale.y = 0.800000012;
-            img_reflect.position.y = -140;
-            set_rotation_x(img_reflect.rotation, 90);
-            set_rotation_y(img_reflect.rotation, 180);
+            img_reflect.scale = ;
+            img_reflect.position = ;
+            img_reflect.rotation = ;
 	my_plane.set_image = function(value) 
 	{
 		set_transform_image(my_plane, value);
@@ -217,9 +216,7 @@ camera_1.manager = manager;
             lbl1.set_y(100);
             lbl1.set_color("Ivory");
             lbl1.text("Put the mouse over an image to zoom it");
-            camera_1.position.x = 100;
-            camera_1.position.y = 50;
-            camera_1.position.z = 1200;
+            camera_1.position = ;
             application.angle = null;
             application.start = 0;
             application.speed = 0.0199999996;
