--- a/xss/production/test/3js_class_test_2.html
+++ b/xss/production/test/3js_class_test_2.html
@@ -125,7 +125,7 @@ camera_1.manager = manager;
             lbl1.set_x(200);
             lbl1.set_y(100);
             lbl1.text("Pass the mouse over a cylinder to change its color");
-            camera_1.position.z = 1000;
+            camera_1.position = ;
 	application.events.addListener("init", function()
 	{    
 		var cylinder_1 = 
