--- a/xss/production/test/3js_cube.html
+++ b/xss/production/test/3js_cube.html
@@ -123,9 +123,8 @@ cube_1.manager = manager;
 plane_1.manager = manager;
 		    lbl0 = new ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
             set_material_alpha(plane_material, 50);
-            camera_1.position.y = 150;
-            camera_1.position.z = 500;
-            cube_1.position.y = 150;
+            camera_1.position = ;
+            cube_1.position = ;
             lbl0.set_x(200);
             lbl0.set_y(75);
             lbl0.text("Drag mouse to spin the cube");
