--- a/xss/production/test/3js_geometries.html
+++ b/xss/production/test/3js_geometries.html
@@ -122,20 +122,16 @@ torus1.manager = manager;
 	    manager.scene.add(torusknot1);
 		torusknot1.events = new ev.EventHolder();
 torusknot1.manager = manager;
-            camera_1.position.z = 200;
-            tetra1.position.x = -60;
-            plane1.position.x = 60;
-            set_rotation_x(plane1.rotation, 90);
-            cube1.position.y = -60;
-            icosahedron1.position.y = 60;
-            cylinder1.position.y = 60;
-            cylinder1.position.x = 60;
-            octa1.position.x = -60;
-            octa1.position.y = 60;
-            torus1.position.x = -60;
-            torus1.position.y = -60;
-            torusknot1.position.x = 60;
-            torusknot1.position.y = -60;
+            camera_1.position = ;
+            tetra1.position = ;
+            plane1.position = ;
+            plane1.rotation = ;
+            cube1.position = ;
+            icosahedron1.position = ;
+            cylinder1.position = ;
+            octa1.position = ;
+            torus1.position = ;
+            torusknot1.position = ;
             application.time = null;
 	application.events.addListener("update", function()
 	{    
