--- a/xss/production/test/3js_lights.html
+++ b/xss/production/test/3js_lights.html
@@ -121,16 +121,10 @@ particle3.manager = manager;
 	    manager.scene.add(sphere1);
 		sphere1.events = new ev.EventHolder();
 sphere1.manager = manager;
-            camera_1.position.z = 100;
-            particle1.scale.x = 0.5;
-            particle1.scale.y = 0.5;
-            particle1.scale.z = 0.5;
-            particle2.scale.x = 0.5;
-            particle2.scale.y = 0.5;
-            particle2.scale.z = 0.5;
-            particle3.scale.x = 0.5;
-            particle3.scale.y = 0.5;
-            particle3.scale.z = 0.5;
+            camera_1.position = ;
+            particle1.scale = ;
+            particle2.scale = ;
+            particle3.scale = ;
             application.time = null;
 	application.events.addListener("update", function()
 	{    
