--- a/xss/production/test/3js_materials.html
+++ b/xss/production/test/3js_materials.html
@@ -175,15 +175,10 @@ point_light_1.manager = manager;
 	    manager.scene.add(plane_1);
 		plane_1.events = new ev.EventHolder();
 plane_1.manager = manager;
-            camera_1.position.z = 800;
-            camera_1.position.y = 200;
-            dir_light_1.position.x = Math.random() - 0.5;
-            dir_light_1.position.y = Math.random() - 0.5;
-            dir_light_1.position.z = Math.random() - 0.5;
-            particle_1.scale.x = 5;
-            particle_1.scale.y = 5;
-            particle_1.scale.z = 5;
-            plane_1.position.y = -100;
+            camera_1.position = ;
+            dir_light_1.position = ;
+            particle_1.scale = ;
+            plane_1.position = ;
             application.timer = null;
             application.objects = [];
 	application.events.addListener("init", function()
