--- a/xss/production/test/3js_package.html
+++ b/xss/production/test/3js_package.html
@@ -205,35 +205,30 @@ plane_3.manager = manager;
             __label1.set_y(75);
             __label1.set_color("Ivory");
             __label1.text("Press click to load the package");
-            camera_1.position.x = 100;
-            camera_1.position.y = 100;
-            camera_1.position.z = 1000;
+            camera_1.position = ;
             set_3js_object_texture(plane_1, "images/test1.png");
-            plane_1.position.x = 100;
-            plane_1.position.y = 100;
-            set_rotation_x(plane_1.rotation, 90);
+            plane_1.position = ;
+            plane_1.rotation = ;
             set_3js_object_texture(plane_2, "images/test2.png");
-            plane_2.position.x = 300;
-            plane_2.position.y = 100;
-            set_rotation_x(plane_2.rotation, 90);
+            plane_2.position = ;
+            plane_2.rotation = ;
             set_3js_object_texture(plane_3, "images/test3.png");
-            plane_3.position.x = 100;
-            plane_3.position.y = 300;
-            set_rotation_x(plane_3.rotation, 90);
+            plane_3.position = ;
+            plane_3.rotation = ;
 				pack_1.events.addListener("loaded", function()
 				{
 });
 				pack_1.events.addListener("loaded", function()
 				{
             set_3js_object_texture(plane_4, "images/test4.png");
-            plane_4.position.x = -100;
-            set_rotation_x(plane_4.rotation, 90);
+            plane_4.position = ;
+            plane_4.rotation = ;
 });
 				pack_1.events.addListener("loaded", function()
 				{
             set_3js_object_texture(plane_5, "images/test5.png");
-            plane_5.position.x = -400;
-            set_rotation_x(plane_5.rotation, 90);
+            plane_5.position = ;
+            plane_5.rotation = ;
 });
 	application.events.addListener("click", function()
 	{    
