--- a/xss/production/test/3js_particle_system.html
+++ b/xss/production/test/3js_particle_system.html
@@ -99,7 +99,7 @@ __particle_system1.manager = manager;
             lbl0.set_color("White");
             lbl0.text("Move the mouse to rotate the camera");
             manager.events.addListener('update', function(){camera_1.lookAt(scene.position)});
-            camera_1.position.z = 1000;
+            camera_1.position = ;
             application.mouse_x = null;
             application.mouse_y = null;
 	application.events.addListener("update", function()
