--- a/xss/production/test/animtest.html
+++ b/xss/production/test/animtest.html
@@ -208,6 +208,7 @@ anim3.stop();
 anim4 =
 new state.Sequence(
 g_sequence_manager);
+            anim4.nested = nested;
                 anim4.start();
             anim4.nested =
 new state.Sequence(
