--- a/xss/production/test/dd.html
+++ b/xss/production/test/dd.html
@@ -769,7 +769,7 @@ g_sequence_manager);
         ____i18.keys[0].value = this__.scale.z;
         });
             image_plane.unselected = unselected;
-            set_rotation_x(image_plane.rotation, 90);
+            image_plane.rotation = ;
             image_plane.group = null;
             image_plane.next_image = null;
             image_plane.image = null;
@@ -1010,24 +1010,15 @@ create_image_plane(100, 100, 1, 1)
  ;
 				if(img9 instanceof THREE.Object3D)
 					image_group.add(img9);
-            img1.position.x = -150;
-            img1.position.y = -150;
-            img2.position.x = -150;
-            img2.position.y = 0;
-            img3.position.x = -150;
-            img3.position.y = 150;
-            img4.position.x = 0;
-            img4.position.y = -150;
-            img5.position.x = 0;
-            img5.position.y = 0;
-            img6.position.x = 0;
-            img6.position.y = 150;
-            img7.position.x = 150;
-            img7.position.y = -150;
-            img8.position.x = 150;
-            img8.position.y = 0;
-            img9.position.x = 150;
-            img9.position.y = 150;
+            img1.position = ;
+            img2.position = ;
+            img3.position = ;
+            img4.position = ;
+            img5.position = ;
+            img6.position = ;
+            img7.position = ;
+            img8.position = ;
+            img9.position = ;
             image_group.destination = null;
         image_group.images = null;
         image_group.images_set = function (value)
@@ -1080,15 +1071,11 @@ create_image_group()
 create_image_group()
  ;
 			imgg3.manager = manager;
-            camera_1.position.z = 1000;
-            imgg2.position.x = -500;
-            imgg2.scale.x = 0.5;
-            imgg2.scale.y = 0.5;
-            imgg2.scale.z = 1;
-            imgg3.position.x = 500;
-            imgg3.scale.x = 0.5;
-            imgg3.scale.y = 0.5;
-            imgg3.scale.z = 1;
+            camera_1.position = ;
+            imgg2.position = ;
+            imgg2.scale = ;
+            imgg3.position = ;
+            imgg3.scale = ;
             application.left = {x : -500,y : 0,z : 0};
             application.right = {x : 500,y : 0,z : 0};
             application.selected = imgg1;
