--- a/xss/production/test/3js_class_test_1.html
+++ b/xss/production/test/3js_class_test_1.html
@@ -181,7 +181,7 @@ camera_1.manager = manager;
             lbl0.set_x(200);
             lbl0.set_y(75);
             lbl0.text("Click wherever to create a randomly positioned plane");
-            camera_1.position.z = 1000;
+            camera_1.position = ;
             application.img_array = ["images/test1.png", "images/test2.png", "images/test3.png", "images/test4.png", "images/test5.png"];
             application.i = 0;
 	application.events.addListener("click", function(x,y)
