--- a/xss/production/test/cube_ui.html
+++ b/xss/production/test/cube_ui.html
@@ -498,9 +498,8 @@ g_sequence_manager);
             btnMute.set_width(40);
             btnMute.set_height(40);
             set_material_alpha(plane_material, 50);
-            camera_1.position.y = 150;
-            camera_1.position.z = 500;
-            cube_1.position.y = 150;
+            camera_1.position = ;
+            cube_1.position = ;
             application.x_target_rotation = 0;
             application.x_target_rotation_on_mouse_down = 0;
             application.mouse_x = 0;
