--- a/xss/production/test/g_anim.html
+++ b/xss/production/test/g_anim.html
@@ -237,7 +237,7 @@ camera_1.manager = manager;
             img4.set_y(100);
             img4.set_width(128);
             img4.set_height(164);
-            camera_1.position.z = 1000;
+            camera_1.position = ;
 if(ui_)
 {	
 	SoundUtils = new ui.SoundUtils();		
