--- a/xss/production/test/uibuffer_test.html
+++ b/xss/production/test/uibuffer_test.html
@@ -397,12 +397,9 @@ plane_1.manager = manager;
             title2.set_y(10);
             title2.text("Social networks");
             set_material_alpha(plane_material, 50);
-            camera_1.position.y = 100;
-            camera_1.position.z = 500;
-            cube_1.position.x = -150;
-            cube_1.position.y = 50;
-            plane_1.position.x = -150;
-            plane_1.position.y = -100;
+            camera_1.position = ;
+            cube_1.position = ;
+            plane_1.position = ;
             application.x_target_rotation = 0;
             application.x_target_rotation_on_mouse_down = 0;
             application.mouse_x = 0;
