--- a/xss/production/test/webgl_particle.html
+++ b/xss/production/test/webgl_particle.html
@@ -18,16 +18,6 @@
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/Utils.js"></script>
             <script type="text/javascript" src="../js/three/Detector.js"></script>
-            <script type="text/javascript" src="../js/three/fonts.js"></script>
-            <script type="text/javascript" src="../js/three/ShaderExtras.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/EffectComposer.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/RenderPass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/ShaderPass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/BloomPass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/FilmPass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/DotScreenPass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/TexturePass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/MaskPass.js"></script>
 <script type="text/javascript">	
 if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 			var renderer = new THREE.WebGLRenderer( { antialias: false } );
@@ -235,8 +225,7 @@ __particle_system4.manager = manager;
 		manager.scene.add( __particle_system5 );	
 __particle_system5.manager = manager;
             manager.events.addListener('update', function(){camera_1.lookAt(scene.position)});
-            camera_1.position.y = 300;
-            camera_1.position.z = 500;
+            camera_1.position = ;
             __fly_controls1.movementSpeed = 20;
             __fly_controls1.rollSpeed = 0.200000003;
 var event_manager = new ev.ThreeEventManager();
