--- a/xss/production/test/wgl_monster.html
+++ b/xss/production/test/wgl_monster.html
@@ -18,16 +18,7 @@
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/Utils.js"></script>
             <script type="text/javascript" src="../js/three/Detector.js"></script>
-            <script type="text/javascript" src="../js/three/fonts.js"></script>
-            <script type="text/javascript" src="../js/three/ShaderExtras.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/EffectComposer.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/RenderPass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/ShaderPass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/BloomPass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/FilmPass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/DotScreenPass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/TexturePass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/MaskPass.js"></script>
+            <script type="text/javascript" src="../js/three/loaders/ColladaLoader.js"></script>
 <script type="text/javascript">	
 if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 			var renderer = new THREE.WebGLRenderer( { antialias: false } );
@@ -117,13 +108,8 @@ d_ligth_1.manager = manager;
 			{
 				var monster_model_mesh = new THREE.Mesh(geometry, new THREE.MeshFaceMaterial());
 				monster_model.add(monster_model_mesh);
-				
-            monster_model.position.x = -110;
-            monster_model.position.y = -350;
-            monster_model.position.z = -350;
-            monster_model.scale.x = 0.5;
-            monster_model.scale.y = 0.5;
-            monster_model.scale.z = 0.5;
+            monster_model.position = ;
+            monster_model.scale = ;
 				manager.scene.add(monster_model);
 			} 		
 	);
@@ -135,10 +121,9 @@ monster_model.manager = manager;
 		plane_1.events = new ev.EventHolder();
 plane_1.manager = manager;
             manager.events.addListener('update', function(){camera_1.lookAt(monster_model.position)});
-            camera_1.position.z = 1000;
-            d_ligth_1.position.y = -70;
-            d_ligth_1.position.z = 100;
-            plane_1.position.y = -500;
+            camera_1.position = ;
+            d_ligth_1.position = ;
+            plane_1.position = ;
             application.mouse_x = null;
             application.mouse_y = null;
 	application.events.addListener("update", function()
