--- a/xss/production/test/wgl_pp_embedded.html
+++ b/xss/production/test/wgl_pp_embedded.html
@@ -18,16 +18,7 @@
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/Utils.js"></script>
             <script type="text/javascript" src="../js/three/Detector.js"></script>
-            <script type="text/javascript" src="../js/three/fonts.js"></script>
-            <script type="text/javascript" src="../js/three/ShaderExtras.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/EffectComposer.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/RenderPass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/ShaderPass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/BloomPass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/FilmPass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/DotScreenPass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/TexturePass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/MaskPass.js"></script>
+            <script type="text/javascript" src="../js/three/loaders/ColladaLoader.js"></script>
 <script type="text/javascript">	
 if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 			var renderer = new THREE.WebGLRenderer( { antialias: false } );
@@ -256,12 +247,8 @@ d_ligth_1.manager = manager;
 				var head_model_mesh = new THREE.Mesh(geometry, shader_mat1);
 				head_model.add(head_model_mesh);
             if(1) geometry.computeTangents();
-            head_model.position.x = -300;
-            head_model.position.z = -400;
-            head_model.position.y = -20;
-            head_model.scale.x = 250;
-            head_model.scale.y = 250;
-            head_model.scale.z = 250;
+            head_model.position = ;
+            head_model.scale = ;
 				manager.scene.add(head_model);
 			} 		
 	);
@@ -300,9 +287,8 @@ create_effect_fxaa()
             shader_mat1.uniforms['uShininess'].value = 35;
             shader_mat1.uniforms['wrapRGB'].value = three_utils.vector3(0.575, 0.5, 0.5);
             manager.events.addListener('update', function(){camera_1.lookAt(head_model.position)});
-            camera_1.position.z = 1000;
-            d_ligth_1.position.y = -70;
-            d_ligth_1.position.z = 100;
+            camera_1.position = ;
+            d_ligth_1.position = ;
             eb.uniforms['opacity'].value = 0.400000006;
             ec.uniforms['powRGB'].value = three_utils.vector3(1.4, 1.45, 1.45);
             ec.uniforms['mulRGB'].value = three_utils.vector3(1.1, 1.1, 1.1);
