--- a/xss/production/test/wgl_shader_cl.html
+++ b/xss/production/test/wgl_shader_cl.html
@@ -85,8 +85,6 @@ void main(void)
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/Utils.js"></script>
             <script type="text/javascript" src="../js/three/Detector.js"></script>
-            <script type="text/javascript" src="../js/three/fonts.js"></script>
-            
 <script type="text/javascript">	
 if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 			var renderer = new THREE.WebGLRenderer( { antialias: false } );
@@ -235,9 +233,8 @@ plane_1.manager = manager;
             shader_mat2.uniforms.time.value = 1;
             shader_mat2.uniforms.resolution.value = three_utils.vector2(0,0);
             manager.events.addListener('update', function(){camera_1.lookAt(scene.position)});
-            camera_1.position.y = 150;
-            camera_1.position.z = 500;
-            cube_1.position.y = 150;
+            camera_1.position = ;
+            cube_1.position = ;
             application.x_target_rotation = 0;
             application.x_target_rotation_on_mouse_down = 0;
             application.mouse_x = 0;
