--- a/xss/production/test/wgl_shader_fresnel_cl.html
+++ b/xss/production/test/wgl_shader_fresnel_cl.html
@@ -17,8 +17,6 @@
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/Utils.js"></script>
             <script type="text/javascript" src="../js/three/Detector.js"></script>
-            <script type="text/javascript" src="../js/three/fonts.js"></script>
-            
 <script type="text/javascript">	
 if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 			var renderer = new THREE.WebGLRenderer( { antialias: false } );
@@ -125,7 +123,7 @@ camera_1.manager = manager;
 __panorama_cube1.manager = manager;
             shader_mat1.uniforms['tCube'].texture = t_cube1;
             manager.events.addListener('update', function(){camera_1.lookAt(scene.position)});
-            camera_1.position.z = 3200;
+            camera_1.position = ;
             application.mouse_x = null;
             application.mouse_y = null;
             application.spheres = [];
