--- a/xss/production/test/wgl_text.html
+++ b/xss/production/test/wgl_text.html
@@ -17,16 +17,6 @@
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/Utils.js"></script>
             <script type="text/javascript" src="../js/three/Detector.js"></script>
-            <script type="text/javascript" src="../js/three/ShaderExtras.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/EffectComposer.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/RenderPass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/ShaderPass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/BloomPass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/FilmPass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/DotScreenPass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/TexturePass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/MaskPass.js"></script>
-            <script type="text/javascript" src="../js/three/loaders/ColladaLoader.js"></script>
             <script type="text/javascript" src="../js/three/fonts.js"></script>
 <script type="text/javascript">	
 if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
@@ -91,11 +81,10 @@ size:40,height:5,curveSegments:3,weight:"bold",style:"normal",bevelEnabled:true,
 	text_1 = new THREE.Mesh(text_1_geometry, material_1); 
 	manager.scene.add(text_1);
 text_1.manager = manager;
-            camera_1.position.z = 350;
-            light.position.y = 0.5;
-            light.position.z = 1;
-            text_1.position.x = -100;
-            set_rotation_y(text_1.rotation, 30);
+            camera_1.position = ;
+            light.position = ;
+            text_1.position = ;
+            text_1.rotation = ;
 var event_manager = new ev.ThreeEventManager();
 document.onmousemove = function(ev)
 {
